# k8secret

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test-and-publish.yaml
src/k8secrets/: __main__.py  secrets.py
tests/: test_generator.py  test_parser.py
